# PSmacOS

./: .gitignore  .travis.yml  LICENSE  TODO  build.ps1  deploy.psdeploy.ps1  psake.ps1  readme.md
PSmacOS/: PSmacOS.psd1  PSmacOS.psm1  secrets.psm1
Tests/: Clipboard.Tests.ps1
docs/: Get-Clipboard.md  Invoke-AppleScript.md  Out-GridView.md  Set-Clipboard.md  Show-MessageBox.md
src/: Clipboard.cs  MarshalExtensions.cs  NativeBridge.cs  OutGridView.cs  PSObjectHelper.cs  PSmacOS.csproj  PSmacOS.sln  ShowMessageBox.cs  global.json  nuget.config
src/Cmdlets/: Clipboard.cs  InvokeAppleScript.cs  OutGridView.cs  ShowMessageBox.cs
src/GridViewer/: GVApplicationDelegate.h  GVApplicationDelegate.m  GVObjectTableViewController.h  GVObjectTableViewController.m  GVWindowController.h  GVWindowController.m  GridIcon.icns  GridViewer.cs  GridViewer.csproj  GridViewerApplicationDelegate.h  GridViewerApplicationDelegate.m  Info.plist  PSObjectGridViewController.h  PSObjectGridViewController.m  Storyboard.storyboard  main.m
src/GridViewer/GridViewer.xcodeproj/: project.pbxproj
src/GridViewer/GridViewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/Native/: CMakeLists.txt  bridge_gridview.m  bridge_pasteboard.m  libpsmacosbridging.h
src/NativeBridge/: AppleScript.cs  Clipboard.cs  GridView.cs  MessageBox.cs
src/libpsmacosbridging/: CMakeLists.txt  bridge_applescript.m  bridge_gridview.m  bridge_memory.m  bridge_messagebox.m  bridge_pasteboard.m  libpsmacosbridging.h
